# Templates

./: CMakeLists.txt  README.md  c_cpp_properties.json  class.cpp  class.hpp  launch.json  main.cpp  tasks.json  the_cherno_memory.cpp  the_cherno_timer_class.cpp  time_measure.hpp
